# sqlalchemy-playground

./: README.md  demo.py  exercise1.py  exercise2.py  exercise3.py  exercise_today.py  pyproject.toml
tests/: conftest.py  test_demo.py  test_exercise1.py  test_exercise2.py  test_exercise3.py  test_exercise_today.py
